add facebook login
 Committer: Evader Fati <evaderfati@gmail.com>

 On branch andy
 Changes to be committed:
	modified:   .idea/compiler.xml
	modified:   .idea/gradle.xml
	modified:   .idea/misc.xml
	new file:   .idea/runConfigurations.xml
	modified:   app/build.gradle
	modified:   app/src/main/AndroidManifest.xml
	modified:   app/src/main/java/com/example/batch23app/MainActivity.java
	modified:   app/src/main/res/layout/activity_main.xml
	modified:   app/src/main/res/values/strings.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Batch23App</string>
+
+<!--    facebook app id (for login)-->
+    <string name="facebook_app_id">848499986022672</string>
+    <string name="fb_login_protocol_scheme">fb848499986022672</string>
 </resources>
